# fourier

./: CMakeLists.txt
src/: main.c
